--- a/iframes/index.html
+++ b/iframes/index.html
@@ -6,10 +6,12 @@
     <title>Usando iframes</title>
     <style>
         iframe{
-            height: 50vh;
+            height: 60vh;
             width: 100vw;
-            
-
+        
+        }
+        *{
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
@@ -19,7 +21,19 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab nulla laborum accusantium eum tenetur harum asperiores aliquam placeat eligendi, expedita magnam quas vel, veniam aliquid quaerat blanditiis. Delectus, voluptatem atque!
     Earum unde rem aperiam, sit similique delectus, itaque voluptatibus praesentium perferendis ipsum aspernatur sequi sapiente rerum? Iusto blanditiis corrupti fugiat maiores, ad dicta! Dolorum exercitationem ullam optio placeat nisi modi!
     </p>
-    <iframe src="https://gbarbosa06.github.io/site-cardiologista/site" frameborder="2"></iframe>
+    <h2>Escolha um dos sites para a visualização</h2>
+    <ul>
+        <li><a href="https://gbarbosa06.github.io/descobrimento-do-brasil/" target="frame">Descobrimento do Brasil</a></li>
+        <li><a href="https://gbarbosa06.github.io/dia-internacional-da-danca/" target="frame">Dia internacional da dança</a></li>
+        <li><a href="https://gbarbosa06.github.io/site-cardiologista/site" target="frame">CardioLife</a></li>
+        <li><a href="https://gbarbosa06.github.io/pizzaria-barros/" target="frame">Pizzaria Barros</a></li>
+
+
+
+
+    </ul>
+
+    <iframe id="tela" name="frame" src="" frameborder="2"></iframe>
 
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse atque harum, quas earum enim optio! Ipsa saepe praesentium quia dolor? Sit quaerat perferendis possimus commodi quidem omnis incidunt rem quisquam! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore exercitationem libero qui ex quis excepturi ab, dolor temporibus dolorum eos quas quaerat tenetur at iure mollitia. Voluptatem sequi minima laborum!
