--- a/Projeto-redes-sociais/index.html
+++ b/Projeto-redes-sociais/index.html
@@ -10,10 +10,10 @@
 <body>
     <main>
         <section id="phone">
-
+            <iframe src="phone.html" frameborder="0" name="tela" id="tela"></iframe>
         </section>
         <section>
-            
+
         </section>
 
 
