--- a/Projeto-redes-sociais/index.html
+++ b/Projeto-redes-sociais/index.html
@@ -10,10 +10,17 @@
 <body>
     <main>
         <section id="phone">
-            <iframe src="phone.html" frameborder="0" name="tela" id="tela"></iframe>
+            <iframe src="phone.html" frameborder="0" name="tela" id="tela">
+                Seu navegador não é compatível com essa função.
+            </iframe>
         </section>
-        <section>
-
+        <section id="redes">
+            <a href="phone.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
         </section>
 
 
