--- a/Projeto-redes-sociais/index.html
+++ b/Projeto-redes-sociais/index.html
@@ -10,17 +10,17 @@
 <body>
     <main>
         <section id="phone">
-            <iframe src="phone.html" frameborder="0" name="tela" id="tela">
+            <iframe src="phone.html" frameborder="0" name="tela" id="tela" scrolling="auto">
                 Seu navegador não é compatível com essa função.
             </iframe>
         </section>
         <section id="redes">
             <a href="phone.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
         </section>
 
 
