--- a/formulários/index.html
+++ b/formulários/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Início em formulários</title>
+    <link rel="stylesheet" href="style.css">
     <style>
-        *{
-            font-family: Arial, Helvetica, sans-serif;
-        }
+        
     </style>
 </head>
 <body>
