--- a/formulários/fomr3-notas.html
+++ b/formulários/fomr3-notas.html
@@ -15,7 +15,7 @@
         </div>
         <div>
             <label for="nota">Nota do estudante</label>
-            <input type="number" name="nota" id="nota" min="0" max="10" step="0.1" required value="7">
+            <input type="number" name="nota" id="nota" min="0" max="10" step="0.1" required>
         </div>
         <div>
             <label for="dia">Dia da prova</label>
