--- a/formulários/form5.html
+++ b/formulários/form5.html
@@ -11,6 +11,18 @@
         <p><label for="cor">Cor:</label>
             <input type="color" name="cor" id="cor">
         </p>
+        <p>
+            <label for="sat">Gostou da cor?</label>
+            <input type="range" name="sat" id="sat" min="1" max="10">
+        </p>
+        <p>
+            <label for="foto">Sua foto</label>
+            <input type="file" name="foto" id="foto">
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
     </form>
 </body>
 </html>
