--- a/formulários/form7-soma.html
+++ b/formulários/form7-soma.html
@@ -9,8 +9,22 @@
 <body>
     <h1>Soma de 2 números</h1>
     <form action="cadastro.php">
-        <div></div>
-        
+        <div>
+            <label for="n1">Primeiro número:</label>
+            <input type="number" name="n1" id="n1" required placeholder="0 - 500" min="0" max="500" oninput="soma.innerHTML = Number(n1.value) + Number(n2.value)" >
+        </div>
+        <div>
+            <label for="n2">Segundo número:</label>
+            <input type="number" name="n2" id="n2" required placeholder="0 - 500" min="0" max="500" oninput="soma.innerHTML = Number(n1.value) + Number(n2.value)">
+        </div>
+        <div>
+            <label for="soma">Resultado:</label>
+            <output name="soma" id="soma">0</output>
+        </div>
+        <div>
+            <input type="reset" value="Limpar">
+        </div>
+
 
 
     </form>
