estilos para telas e impressoras

--- a/media queries/md1/index.html
+++ b/media queries/md1/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="estilos/impressora.css" media="print">
 </head>
 <body>
-    
+    <menu>
+        <h1>Noticias</h1>
+        <ul>
+            <li>Esportes</li>
+            <li>Política</li>
+            <li>Tecnologia</li>
+        </ul>
+    </menu>
+    <h1>Media Queries</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam ut eveniet cumque odio necessitatibus quod id praesentium, provident minima quae totam magni ullam veritatis placeat dolore commodi amet corporis. Eaque.
+    Distinctio dolores ratione doloremque veniam praesentium aliquam possimus asperiores rerum incidunt ducimus est impedit sed, non reiciendis ex magni quibusdam ipsa fugiat ipsam blanditiis aliquid labore! Reprehenderit facere nisi amet.
+    Amet obcaecati porro accusamus cum debitis, impedit, ipsum beatae a consequatur quibusdam itaque nostrum cumque culpa rem aliquam quisquam consequuntur nulla ratione architecto saepe alias minima. Id dignissimos assumenda nam.
+    Nesciunt ratione commodi nobis cupiditate totam laudantium quis architecto id quo, dicta ad ut enim! Ullam eius iste nulla commodi in, corporis facere amet. Quia illo excepturi suscipit modi libero!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, quam ab ratione adipisci exercitationem maiores delectus consectetur ullam, eos animi itaque minima corrupti recusandae. Odio neque eaque ullam molestiae illo.
+    Laborum est omnis tenetur qui quas quis cupiditate, corrupti blanditiis quos unde eaque placeat ipsum odit excepturi obcaecati temporibus! Corporis numquam hic reiciendis debitis velit soluta magni expedita at facere.
+    Nisi animi sint velit enim voluptatibus accusamus iusto accusantium, deleniti eius exercitationem voluptatem aliquam ex nesciunt nulla ducimus cupiditate? Quam doloremque asperiores temporibus non aliquid illo sed inventore? Odio, delectus?
+    Saepe nesciunt voluptatibus, ullam maiores explicabo ea ab vitae omnis alias rem unde ipsa rerum, obcaecati modi sequi, at nihil libero? Amet assumenda laborum quaerat cum dolore est ipsum ullam.
+    Veniam culpa accusantium tempora possimus voluptates cumque quibusdam minima impedit. Deleniti repellendus libero amet laudantium fugiat ea illum animi sunt est voluptatem sequi assumenda accusantium architecto commodi fuga, iste esse!</p>
 </body>
 </html>
