--- a/media-queries/mq4/index.html
+++ b/media-queries/mq4/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css"> <!--Versão mobile first-->
+    <link rel="stylesheet" href="estilos/media-queries.css"> <!--Versão para dispositivos maiores-->
 </head>
 <body>
     <main>
         <h1>Testando Media Queries</h1>
+        <img src="imagens/icon-phone.png">
+        <img src="imagens/icon-tablet.png">
+        <img src="imagens/icon-print.png">
+        <img src="imagens/icon-pc.png">
+        <img src="imagens/icon-tv.png">
     </main>
 </body>
 </html>
