--- a/media-queries/mq4/index.html
+++ b/media-queries/mq4/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <main>
-        <h1>Testando Media Queries</h1>
-        <img src="imagens/icon-phone.png">
-        <img src="imagens/icon-tablet.png">
-        <img src="imagens/icon-print.png">
-        <img src="imagens/icon-pc.png">
-        <img src="imagens/icon-tv.png">
+        <h1>Media Queries e Mobile First</h1>
+        <img src="imagens/icon-phone.png" id="phone">
+        <img src="imagens/icon-tablet.png" id="tablet">
+        <img src="imagens/icon-print.png" id="print">
+        <img src="imagens/icon-pc.png" id="pc">
+        <img src="imagens/icon-tv.png" id="tv">
     </main>
 </body>
 </html>
