--- a/media-queries/mq5/index.html
+++ b/media-queries/mq5/index.html
@@ -6,11 +6,15 @@
     <title>Media query</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mq.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
         <h1>Media Query</h1>
-        <menu>
+        <span id="burg" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+         </span>
+        <menu id="menu">
             <ul>
                 <li><a href="#">opção 1</a></li>
                 <li><a href="#">opção 2</a></li>
@@ -36,5 +40,28 @@
         Dolor libero minima cumque pariatur odit quae? Praesentium id vero earum repudiandae, perferendis soluta quisquam libero fuga nulla iusto repellat! Obcaecati suscipit odit illo. Rerum assumenda amet nulla nihil dolores?
         Facilis aut fuga quia dicta cum culpa, praesentium id quo asperiores. Id ipsa animi perferendis voluptatem, veritatis soluta, enim suscipit nesciunt ex facere ea! A, eos! Veritatis expedita incidunt excepturi!</p>
     </main>
+
+
+
+    <script>
+        function clickMenu(){
+            if (menu.style.display == 'none') {
+                menu.style.display = 'block'
+            }
+            else{
+                menu.style.display = 'none'
+            }
+        }
+
+
+/*         function clickMenu(){
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none'
+            }
+            else {
+                menu.style.display = 'block'
+            }
+        } */
+    </script>
 </body>
 </html>
