--- a/media-queries/mq5/index.html
+++ b/media-queries/mq5/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/mq.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-<body>
+<body onresize="tamanho()">
     <header>
         <h1>Media Query</h1>
         <span id="burg" class="material-symbols-outlined" onclick="clickMenu()">
@@ -52,7 +52,14 @@
                 menu.style.display = 'none'
             }
         }
-
+        function tamanho(){
+            if (window.innerWidth >= 768){
+                menu.style.display = 'block'
+            }
+            else {
+                menu.style.display = 'none'
+            }
+        }
 
 /*         function clickMenu(){
             if (menu.style.display == 'block') {
