--- a/media-queries/mq6-projeto-login/index.html
+++ b/media-queries/mq6-projeto-login/index.html
@@ -15,7 +15,9 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a). Faça login para acessar sua conta e fazer as configurações necessárias</p>
-                <form action="login.php" method="post"></form>
+                <form action="login.php" method="post">
+                    
+                </form>
             </div>
         </section>
     </main>
