--- a/media-queries/mq6-projeto-login/index.html
+++ b/media-queries/mq6-projeto-login/index.html
@@ -16,7 +16,17 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a). Faça login para acessar sua conta e fazer as configurações necessárias</p>
                 <form action="login.php" method="post">
-                    
+                    <div>
+                        <label for="email">Email:</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div>
+                        <label for="senha">Senha</label>
+                        <input type="password" name="senha" id="senha">
+                    </div>
+                    <div>
+                        <input type="submit" value="Enviar">
+                    </div>
                 </form>
             </div>
         </section>
