--- a/media-queries/mq6-projeto-login/index.html
+++ b/media-queries/mq6-projeto-login/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
 
@@ -18,17 +19,25 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a). Faça login para acessar sua conta e fazer as configurações necessárias</p>
-                <form action="login.php" method="post">
+                <form action="login.php" method="post" autocomplete="on">
                     <div>
-                        <label for="email">Email:</label>
-                        <input type="email" name="email" id="email">
+                        <span class="material-symbols-outlined">
+                            login
+                            </span>
+                           
+                        <input type="email" name="email" id="email" placeholder="seu email" required autocomplete="email" maxlength="35">
+                        <label for="email">Login:</label>
                     </div>
                     <div>
+                        <span class="material-symbols-outlined">
+                            password
+                            </span>
+                        <input type="password" name="senha" id="senha" placeholder="sua senha" required autocomplete="current-password" minlength="6" maxlength="25">
                         <label for="senha">Senha</label>
-                        <input type="password" name="senha" id="senha">
                     </div>
                     <div>
                         <input type="submit" value="Enviar">
+                        <a href="esqueci.html">Esqueci minha senha<span class="material-symbols-outlined">mail</span></a>
                     </div>
                 </form>
             </div>
